// feedback_collector.proto
syntax = "proto3";

package sentimentanalyzer;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option java_package = "sentimentanalyzer";
option java_multiple_files = true;
option java_outer_classname = "FeedbackCollectorProto";

// Message containing individual feedback
message FeedbackRequest {
  string feedback_text = 1;
  string api_key = 2;
}

// Feedback summary with statistics
message FeedbackSummary {
  int32 total_feedbacks = 1;
  float average_sentiment_score = 2;
  int32 negative_count = 3;
  int32 positive_count = 4;
}

// Service to collect feedback and generate/reset summary
service FeedbackCollectorService {
  // Receives multiple feedbacks via streaming and returns a summary
  rpc SubmitFeedbacks (stream FeedbackRequest) returns (FeedbackSummary);

  // Resets the summary stored on the server
  rpc ResetFeedbacks (google.protobuf.Empty) returns (google.protobuf.BoolValue);
}
